--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,7 @@
                 <ol type="1">
                   <li>AI-Based Skilled People Marketplace App <i>(Mr. Talal Zaman Abbassi and Yaseen Ejaz, Spring-2024)</i> </li>
 		  <li>Retrieval Augmented Generation for QA using Knowledge Graphs <i>(Mr. Muhammad Yaseen Ejaz and Mr. Muhammad Danish, Spring-2024)</i> </li>
-		  <li>ACE (Autonomous Customer Experience) <i>(Ms. Sibgha Ali and Mr. Sheikh Abdurrehman – 2024)</i> </li>
+		  <li>ACE (Autonomous Customer Experience) <i>(Ms. Sibgha Ali and <a href="https://www.linkedin.com/in/sheikh-abdurrehman-202b96220/">Mr. Sheikh Abdurrehman</a> – 2024)</i> </li>
                 </ol> <br>
 
         </div>
