--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
   	    <a href="https://www.instagram.com/maqbool.phd">
               <i class="fab fa-instagram"></i>
             </a>
+  	    <a href="https://www.youtube.com/pktutorials786">
+              <i class="fab fa-youtube"></i>
+            </a>
   	    <a href="https://www.tiktok.com/@dr.maqbool">
               <i class="fab fa-tiktok"></i>
   	    <a href="https://www.threads.net/@maqbool.phd">
