--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
                   <li>Urdu Language command recognizer and translator using MFCC and CNN <i>(<a href="https://www.linkedin.com/in/usman-nawaz-21532418a">Mr. Usman Nawaz,</a> MS in Artificial Intelligence, Spring-2024)</i> </li>
 		  <li>Pituitary Tumor Feature Extraction Methods Using MRI Images <i>(<a href="https://www.linkedin.com/in/engrmhaseeb/">Mr. Muhammad Haseeb Khan,</a> MS in AI, Spring-2024)</i> </li>
                   <li>Multi-Diseases Prediction Based on Low-Cost Blood Test Reports using AI <i>(<a href="https://www.linkedin.com/in/maria-zaib-a46a57273">Ms. Maria BiBi,</a> MS AI, Spring-2024)</i> </li>
-		  <li>AI based Preservation and Restoration Modelling of the Sub-Surface Water <i>(<a href="https://www.linkedin.com/in/javeria-shah-4862b7174"Ms. Javeria BiBi,</a> MS AI, Spring-2024)</i> </li>
+		  <li>AI based Preservation and Restoration Modelling of the Sub-Surface Water <i>(<a href="https://www.linkedin.com/in/javeria-shah-4862b7174">Ms. Javeria BiBi,</a> MS AI, Spring-2024)</i> </li>
                 </ol> <br>
 
 	      <div class="subheading mb-3">MS/M.Phil. Thesis (Co-Supervised)</div>
