--- a/index.html
+++ b/index.html
@@ -983,6 +983,14 @@
               <i class="fa-li fa fa-check"></i>
               PhD thesis title, <i>“Research on Big Data Graphs Summarization Theory and applications in the Cloud Environment”.</i></li>
           </ul>
+
+	<div class="subheading mb-2">Start Up</div>
+          <ul class="fa-ul mb-0">
+            <li><a href="https://zalmitech.com">Zalmitech</a></li>
+            <li><a href="https://www.pktutorials.com">PK Tutorials</a></li>
+            <li><a href="https://ai4university.com/">Ai4University</a></li>
+          </ul>
+		
         </div>
       </section>
     <hr class="m-0">
