--- a/index.html
+++ b/index.html
@@ -982,14 +982,14 @@
             <li>
               <i class="fa-li fa fa-check"></i>
               PhD thesis title, <i>“Research on Big Data Graphs Summarization Theory and applications in the Cloud Environment”.</i></li>
-          </ul>
+          </ul><br>
 
 	<div class="subheading mb-2">Start Up</div>
-          <ul class="fa-ul mb-0">
-            <li><a href="https://zalmitech.com">Zalmitech</a></li>
-            <li><a href="https://www.pktutorials.com">PK Tutorials</a></li>
-            <li><a href="https://ai4university.com/">Ai4University</a></li>
-          </ul>
+    	<div class="row">
+    		<div class="col-sm"> <a href="https://zalmitech.com"><img src="img/zalmitech.jpg" alt="Zalmitech"></a></div>
+    		<div class="col-sm"> <a href="https://www.pktutorials.com"><img src="img/pktutorials.jpg" alt="PK Tutorials"></a></div>
+    		<div class="col-sm"> <a href="https://ai4university.com"><img src="img/ai4university.jpg" alt="Ai4University"></a></div>
+  	</div>
 		
         </div>
       </section>
