--- a/index.html
+++ b/index.html
@@ -989,6 +989,7 @@
     		<div class="col-sm"> <a href="https://zalmitech.com"><img src="img/zalmitech.jpg" alt="Zalmitech"></a></div>
     		<div class="col-sm"> <a href="https://www.pktutorials.com"><img src="img/pktutorials.jpg" alt="PK Tutorials"></a></div>
     		<div class="col-sm"> <a href="https://ai4university.com"><img src="img/ai4university.jpg" alt="Ai4University"></a></div>
+    		<div class="col-sm"> <a href="https://sehatlog.com"><img src="img/sehatlog.jpg" alt="SehatLog"></a></div>
   	</div>
 		
         </div>
