--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
                   <li>Predictive Maintenance in Industrial IoT using Deep Adversarial Learning <i>(Ms. Isra Zafat, MS AI, Spring-2023)</i> </li>
 		  <li>ECG Based Arrhythmia Classification using Deep Learning <i>(<a href="https://www.linkedin.com/in/aqsa-khan-243881189/">Ms. Aqsa Khan,</a> MS AI, Spring-2023)</i> </li>
 		  <li>Healthcare Recommendation System for Cancer Patient <i>(<a href="https://www.linkedin.com/in/yousra-rehman-bb9a16200">Ms. Yousra Rehman,</a> MS AI, Spring-2023)</i> </li>
-		  <li>Precise Image generation from EEG through generative models <i>(Ms. Sana Irshad, MS Data Science, Spring-2024)</i> </li>
+		  <li>Precise Image generation from EEG through generative models <i>(<a href="https://www.linkedin.com/in/sana-khan-30335b27a">Ms. Sana Irshad,</a> MS Data Science, Spring-2024)</i> </li>
 		  <li>AI-based Eye Disease Pre-Symptomatic Detection Using Next-Generation Sequence Data <i>(Mr. Muhammad Iqbal Khan, MS AI, Spring-2024)</i> </li>
 		  <li>Large Language Model Based Virtual Legal Assistant <i>(<a href="https://www.linkedin.com/in/nawal-khan-880266208/">Ms. Nawal Khan,</a> MS AI, Spring-2024)</i> </li>
                 </ol> <br>
