--- a/index.html
+++ b/index.html
@@ -1045,6 +1045,7 @@
 		<li>Symmetry Journal (MDPI, IF: 2.7), Special Issue on “Symmetry and Asymmetry in AI-Enabled Human-Centric Collaborative Computing”, 2023</li>
 		<li>Journal of Cloud Computing (Springer Nature, IF: 3.4), Special Issue on “Mobile Edge Computing Meets AI”, 2023-2024</li>
 		<li>International Journal of Ad Hoc and Ubiquitous Computing (Inder Science, IF: 0.7), Special Issue on “Federated Learning for Edge based IoT Anomaly Detection in Big Data Streams”, 2024</li>
+		<li>Current Medical Imaging (Bentham Science, IF: 1.1), Special Issue on “Deep Learning for Advanced Image Analysis in Health Informatics”, 2024</li>
             </ol>
 		
              <b>Awards and Honours</b> <br>
