--- a/index.html
+++ b/index.html
@@ -1041,11 +1041,11 @@
 		
              <b>Guest Editor</b>
             <ol type="1">
-              	<li>International Journal of Intelligent Systems (Wiley/Hindawi, IF: 8.99), Special Issue on “Deep Learning-Driven Knowledge Graphs for Intelligent Computing and Applications”, 2022</li>
-		<li>Symmetry Journal (MDPI, IF: 2.7), Special Issue on “Symmetry and Asymmetry in AI-Enabled Human-Centric Collaborative Computing”, 2023</li>
-		<li>Journal of Cloud Computing (Springer Nature, IF: 3.4), Special Issue on “Mobile Edge Computing Meets AI”, 2023-2024</li>
-		<li>International Journal of Ad Hoc and Ubiquitous Computing (Inder Science, IF: 0.7), Special Issue on “Federated Learning for Edge based IoT Anomaly Detection in Big Data Streams”, 2024</li>
-		<li>Current Medical Imaging (Bentham Science, IF: 1.1), Special Issue on “Deep Learning for Advanced Image Analysis in Health Informatics”, 2024</li>
+              	<li>International Journal of Intelligent Systems (Wiley/Hindawi, IF: 8.99), <a href="https://onlinelibrary.wiley.com/page/journal/1098111x/homepage/special_issues.htm">Special Issue</a> on “Deep Learning-Driven Knowledge Graphs for Intelligent Computing and Applications”, 2022</li>
+		<li>Symmetry Journal (MDPI, IF: 2.7), <a href="https://www.mdpi.com/journal/symmetry/special_issues/RDL84E74WH">Special Issue</a> on “Symmetry and Asymmetry in AI-Enabled Human-Centric Collaborative Computing”, 2023</li>
+		<li>Journal of Cloud Computing (Springer Nature, IF: 3.4), <a href="https://www.springeropen.com/collections/mec-ai">Special Issue</a> on “Mobile Edge Computing Meets AI”, 2023-2024</li>
+		<li>International Journal of Ad Hoc and Ubiquitous Computing (Inder Science, IF: 0.7), <a href="https://www.inderscience.com/info/ingeneral/cfp.php?id=5850">Special Issue</a> on “Federated Learning for Edge based IoT Anomaly Detection in Big Data Streams”, 2024</li>
+		<li>Current Medical Imaging (Bentham Science, IF: 1.1), <a href="https://www.eurekaselect.com/call-for-papers-detail/6506/specialissue">Special Issue</a> on “Deep Learning for Advanced Image Analysis in Health Informatics”, 2024</li>
             </ol>
 		
              <b>Awards and Honours</b> <br>
