--- a/index.html
+++ b/index.html
@@ -1065,36 +1065,27 @@
 	    
       <hr class="m-0">
 
-	    <!-- Courses -->
+	<!-- Courses -->
       <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="courses">
         <div class="w-100">
-          <h2 class="mb-5">courses</h2>
+          <h2 class="mb-5">courses taught</h2>
           <i class="fa fa-book"></i><b>
-            Research Interst </b>
+            MS (AI/Data Science) Courses </b>
             <ol type="1">
-              <li>Data Science & Big Data Technology</li>
-              <li>Human-AI Teaming Intelligence </li>
-              <li>Predictive Maintenance </li>
-              <li>Cloud Computing</li>
-              <li>Cyber Security</li>
+              <li>Statiscal and Mathematical Methods For Data Science</li>
+              <li>Time Series Analyis and Predication </li>
+              <li>Advanced Natural Language Processing </li>
             </ol>
           <i class="fa fa-book"></i>
-          <b>Reviewer </b>
+          <b>BS Courses </b>
             <ol type="1">
-              <li>Electronic Commerce and Research (Springer)</li>
-              <li>World Wide Web Journal (Springer)</li>
-              <li>Digital Communications and Networks (Elsevier-KeAi)</li>
-              <li>IEEE Transactions on Big Data</li>
-              <li>IEEE Transactions on Industrial Informatics </li>
-		<li>IEEE Transactions on Intelligent Transportation Systems </li>
-		<li>IEEE Transactions on Emerging Topics in Computing </li>
-		<li>IEEE Transactions on Vehicular Technology </li>
-		<li>IEEE Transactions on Fuzzy Systems </li>
-              <li>IEEE Internet of Things Journal </li>
-              <li>IEEE Access</li>
-		<li>ACM Computing Surveys</li>
+              <li>Introducation to ICT</li>
+              <li>Discreate Stracture</li>
+              <li>Programming Fudamentals</li>
+              <li>Programming For AI</li>
+		<li>Database System</li>
+		<li>Natural Language Processing</li>
             </ol>
-	 <br>
         </div>
       </section>
 	    
