--- a/index.html
+++ b/index.html
@@ -1072,19 +1072,20 @@
           <i class="fa fa-book"></i><b>
             MS (AI/Data Science) Courses </b>
             <ol type="1">
-              <li>Statiscal and Mathematical Methods For Data Science</li>
-              <li>Time Series Analyis and Predication </li>
-              <li>Advanced Natural Language Processing </li>
+              <li>Statiscal and Mathematical Methods For Data Science (Spring 2023, 2024)</li>
+              <li>Time Series Analyis and Predication (Spring 2024)</li>
+              <li>Advanced Natural Language Processing (Fall 2024) </li>
             </ol>
           <i class="fa fa-book"></i>
           <b>BS Courses </b>
             <ol type="1">
-              <li>Introducation to ICT</li>
-              <li>Discreate Stracture</li>
-              <li>Programming Fudamentals</li>
-              <li>Programming For AI</li>
-		<li>Database System</li>
-		<li>Natural Language Processing</li>
+              <li>Introducation to ICT (Fall 2020)</li>
+              <li>Discreate Stracture (Spring 2021, Spring 2023, Fall 2023)<s/li>
+              <li>Programming Fudamentals (Fall 2023) </li>
+	     <li> Introduction to Data Science (Fall 2023) </li>
+              <li>Programming For AI (Spring 2023)</li>
+		<li>Database System (Spring & Fall 2024)</li>
+		<li>Natural Language Processing (Fall 2024)</li>
             </ol>
         </div>
       </section>
