--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         "https://www.linkedin.com/in/maqbool-khan/?originalSubdomain=cn",
         "https://github.com/maknju"
       ],
-      "jobTitle": "ASSISTANT PROFESSOR",
+      "jobTitle": "Associate Professor",
       "worksFor": {
         "@type": "Organization",
         "name": "PAK-AUSTRIA FACHHOSCHULE - INSTITUTE OF APPLED SCIENCES AND TECHNOLOGY"
@@ -202,10 +202,21 @@
             <div class="resume-content">
               <h5 class="mb-0">PAK-AUSTRIA FACHHOSCHULE - INSTITUTE OF APPLED SCIENCES AND TECHNOLOGY, MANG, HARIPUR, KPK, PAKISTAN. </h5>
               <a href="https://www.paf-iast.edu.pk/">www.paf-iast.edu.pk</a>
+              <p>Associate Professor (Computer Science)</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2025.04 – Present</span>
+            </div>
+          </div>
+
+	<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="resume-content">
+              <h5 class="mb-0">PAK-AUSTRIA FACHHOSCHULE - INSTITUTE OF APPLED SCIENCES AND TECHNOLOGY, MANG, HARIPUR, KPK, PAKISTAN. </h5>
+              <a href="https://www.paf-iast.edu.pk/">www.paf-iast.edu.pk</a>
               <p>Assistant Professor (Computer Science)</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">2020.11 – Present</span>
+              <span class="text-primary">2020.11 – 2025.04</span>
             </div>
           </div>
 
