--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <span class="text-primary">Khan</span>
           </h1><br>
   		<h3> Solution Architect &nbsp; | &nbsp; Data Scientist &nbsp; | &nbsp; Researcher </h3> <br>
-      <h3>Assistant Professor</h3>
+      <h3>Associate Professor</h3>
           <div class="subheading mb-5">Pak-Austria Fachhoschule - Institute of Appled Sciences and Technology, Mang, Haripur, KPK, Pakistan.<br>
             <svg class="bi bi-phone" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M11 1H5a1 1 0 00-1 1v12a1 1 0 001 1h6a1 1 0 001-1V2a1 1 0 00-1-1zM5 0a2 2 0 00-2 2v12a2 2 0 002 2h6a2 2 0 002-2V2a2 2 0 00-2-2H5z" clip-rule="evenodd"/>
