--- a/index.html
+++ b/index.html
@@ -1107,14 +1107,18 @@
 
 	      <div class="subheading mb-3">MS/M.Phil. Thesis (Supervised)</div>
                 <ol type="1">
-                  <li>AI-Based Intelligent Vehicle’s Brake Fault Prediction System <i>(<a href="https://scholar.google.com/citations?user=-MLlprQAAAAJ&hl=en&oi=sra">Mr. Muhmmad Ahmed Khan,</a> MS in Artificial Intelligence, Spring-2023)</i> </li>
-		  <li>Fraud Detection in Blockchain Network using Machine Learning and Graph Analytics <i>(<a href="https://fahadiqureshi.github.io/">Mr. Fahad Qureshi,</a> MS Data Science, Fall-2023)</i> </li>
-                  <li>Extract, Transform Load Error Detection and Classification Using Machine Learning <i>(<a href="https://www.linkedin.com/in/nazar-hussain-9b1714157/">Mr. Nazar Hussain,</a> MS in AI, Fall-2023)</i> </li>
-		  <li>Predictive Maintenance Using MDP & Q-Learning <i>(<a href="https://www.linkedin.com/in/bilawal-khan-jadoon-745258170/">Mr. Bilawal Jadoon,</a> MS in Artificial Intelligence, Spring-2024)</i> </li>
-                  <li>Urdu Language command recognizer and translator using MFCC and CNN <i>(<a href="https://www.linkedin.com/in/usman-nawaz-21532418a">Mr. Usman Nawaz,</a> MS in Artificial Intelligence, Spring-2024)</i> </li>
-		  <li>Pituitary Tumor Feature Extraction Methods Using MRI Images <i>(<a href="https://www.linkedin.com/in/engrmhaseeb/">Mr. Muhammad Haseeb Khan,</a> MS in AI, Spring-2024)</i> </li>
-                  <li>Multi-Diseases Prediction Based on Low-Cost Blood Test Reports using AI <i>(<a href="https://www.linkedin.com/in/maria-zaib-a46a57273">Ms. Maria BiBi,</a> MS AI, Spring-2024)</i> </li>
-		  <li>AI based Preservation and Restoration Modelling of the Sub-Surface Water <i>(<a href="https://www.linkedin.com/in/javeria-shah-4862b7174">Ms. Javeria BiBi,</a> MS AI, Spring-2024)</i> </li>
+                  <li>AI-Based Intelligent Vehicle’s Brake Fault Prediction System <i>(<a href="https://scholar.google.com/citations?user=-MLlprQAAAAJ&hl=en&oi=sra">Mr. Muhmmad Ahmed Khan</a>, MS in Artificial Intelligence, Spring-2023)</i> </li>
+		  <li>Fraud Detection in Blockchain Network using Machine Learning and Graph Analytics <i>(<a href="https://fahadiqureshi.github.io/">Mr. Fahad Qureshi</a>, MS Data Science, Fall-2023)</i> </li>
+                  <li>Extract, Transform Load Error Detection and Classification Using Machine Learning <i>(<a href="https://www.linkedin.com/in/nazar-hussain-9b1714157/">Mr. Nazar Hussain</a>, MS in Artificial Intelligence, Fall-2023)</i> </li>
+		  <li>Predictive Maintenance Using MDP & Q-Learning <i>(<a href="https://www.linkedin.com/in/bilawal-khan-jadoon-745258170/">Mr. Bilawal Jadoon</a>, MS in Artificial Intelligence, Spring-2024)</i> </li>
+                  <li>Urdu Language command recognizer and translator using MFCC and CNN <i>(<a href="https://www.linkedin.com/in/usman-nawaz-21532418a">Mr. Usman Nawaz</a>, MS in Artificial Intelligence, Spring-2024)</i> </li>
+		  <li>Pituitary Tumor Feature Extraction Methods Using MRI Images <i>(<a href="https://www.linkedin.com/in/engrmhaseeb/">Mr. Muhammad Haseeb Khan</a>, MS in Artificial Intelligence, Spring-2024)</i> </li>
+                  <li>Multi-Diseases Prediction Based on Low-Cost Blood Test Reports using AI <i>(<a href="https://www.linkedin.com/in/maria-zaib-a46a57273">Ms. Maria BiBi</a>, MS Artificial Intelligence, Spring-2024)</i> </li>
+		  <li>AI based Preservation and Restoration Modelling of the Sub-Surface Water <i>(<a href="https://www.linkedin.com/in/javeria-shah-4862b7174">Ms. Javeria BiBi</a>, MS Artificial Intelligence, Spring-2024)</i> </li>
+		  <li>Anomaly Detection with Self-Supervised Learning Using Deep Edge Intelligence and Federated Learning Approach <i>(<a href="">Mr. Muhammad Qasim Khan</a></i>, MS in Artificial Intelligence, Fall-2024) </li>
+		  <li>Automated Detection of Thalassemia from Blood Smear Images Using Deep Learning <i>(<a href=""></a>Mr. Muhammad Asad Khan</i>, MS in Data Science, Fall-2024) </li>
+		  <li>IOT Enabled Anomaly Detection in Packaging Material Splice <i>(<a href="">Mr. Asif Khan</a> </i>, MS in Artificial Intelligence, Fall-2024)</li>
+		  <li>Fine-tuning of Diffusion Model with Pakistani Demographics <i>(<a href="">Ms. Anum Hafeez</a></i>, MS Data Science, Fall-2024) </li>
                 </ol> <br>
 
 	      <div class="subheading mb-3">MS/M.Phil. Thesis (Co-Supervised)</div>
