--- a/index.html
+++ b/index.html
@@ -1115,10 +1115,10 @@
 		  <li>Pituitary Tumor Feature Extraction Methods Using MRI Images <i>(<a href="https://www.linkedin.com/in/engrmhaseeb/">Mr. Muhammad Haseeb Khan</a>, MS in Artificial Intelligence, Spring-2024)</i> </li>
                   <li>Multi-Diseases Prediction Based on Low-Cost Blood Test Reports using AI <i>(<a href="https://www.linkedin.com/in/maria-zaib-a46a57273">Ms. Maria BiBi</a>, MS Artificial Intelligence, Spring-2024)</i> </li>
 		  <li>AI based Preservation and Restoration Modelling of the Sub-Surface Water <i>(<a href="https://www.linkedin.com/in/javeria-shah-4862b7174">Ms. Javeria BiBi</a>, MS Artificial Intelligence, Spring-2024)</i> </li>
-		  <li>Anomaly Detection with Self-Supervised Learning Using Deep Edge Intelligence and Federated Learning Approach <i>(<a href="">Mr. Muhammad Qasim Khan</a></i>, MS in Artificial Intelligence, Fall-2024) </li>
-		  <li>Automated Detection of Thalassemia from Blood Smear Images Using Deep Learning <i>(<a href=""></a>Mr. Muhammad Asad Khan</i>, MS in Data Science, Fall-2024) </li>
-		  <li>IOT Enabled Anomaly Detection in Packaging Material Splice <i>(<a href="">Mr. Asif Khan</a> </i>, MS in Artificial Intelligence, Fall-2024)</li>
-		  <li>Fine-tuning of Diffusion Model with Pakistani Demographics <i>(<a href="">Ms. Anum Hafeez</a></i>, MS Data Science, Fall-2024) </li>
+		  <li>Anomaly Detection with Self-Supervised Learning Using Deep Edge Intelligence and Federated Learning Approach <i>(<a href="#">Mr. Muhammad Qasim Khan</a></i>, MS in Artificial Intelligence, Fall-2024) </li>
+		  <li>Automated Detection of Thalassemia from Blood Smear Images Using Deep Learning <i>(<a href="#"></a>Mr. Muhammad Asad Khan</i>, MS in Data Science, Fall-2024) </li>
+		  <li>IOT Enabled Anomaly Detection in Packaging Material Splice <i>(<a href="#">Mr. Asif Khan</a> </i>, MS in Artificial Intelligence, Fall-2024)</li>
+		  <li>Fine-tuning of Diffusion Model with Pakistani Demographics <i>(<a href="#">Ms. Anum Hafeez</a></i>, MS Data Science, Fall-2024) </li>
                 </ol> <br>
 
 	      <div class="subheading mb-3">MS/M.Phil. Thesis (Co-Supervised)</div>
