--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="polaroid">
-              <a href="australia.html" target="_blank"><img src="img/Gallery/Australia/01.jpeg" alt="Australia" width="170" height="130"></a><div class="container"><p>AUSTRALIA</p></div>
+              <a href="australia.html" target="_blank"><img src="img/Gallery/Australia/01.jpeg" alt="Australia" width="100%" height="130"></a><div class="container"><p>AUSTRALIA</p></div>
             </div>
           </div>
           <div class="col-md-3">
