--- a/index.html
+++ b/index.html
@@ -1107,28 +1107,28 @@
 
 	      <div class="subheading mb-3">MS/M.Phil. Thesis (Supervised)</div>
                 <ol type="1">
-                  <li>AI-Based Intelligent Vehicle’s Brake Fault Prediction System <i>(<a href="https://scholar.google.com/citations?user=-MLlprQAAAAJ&hl=en&oi=sra">Mr. Muhmmad Ahmed Khan</a>, MS in Artificial Intelligence, Spring-2023)</i> </li>
+                  <li>AI-Based Intelligent Vehicle’s Brake Fault Prediction System <i>(<a href="https://scholar.google.com/citations?user=-MLlprQAAAAJ&hl=en&oi=sra">Mr. Muhmmad Ahmed Khan</a>, MS Artificial Intelligence, Spring-2023)</i> </li>
 		  <li>Fraud Detection in Blockchain Network using Machine Learning and Graph Analytics <i>(<a href="https://fahadiqureshi.github.io/">Mr. Fahad Qureshi</a>, MS Data Science, Fall-2023)</i> </li>
-                  <li>Extract, Transform Load Error Detection and Classification Using Machine Learning <i>(<a href="https://www.linkedin.com/in/nazar-hussain-9b1714157/">Mr. Nazar Hussain</a>, MS in Artificial Intelligence, Fall-2023)</i> </li>
-		  <li>Predictive Maintenance Using MDP & Q-Learning <i>(<a href="https://www.linkedin.com/in/bilawal-khan-jadoon-745258170/">Mr. Bilawal Jadoon</a>, MS in Artificial Intelligence, Spring-2024)</i> </li>
-                  <li>Urdu Language command recognizer and translator using MFCC and CNN <i>(<a href="https://www.linkedin.com/in/usman-nawaz-21532418a">Mr. Usman Nawaz</a>, MS in Artificial Intelligence, Spring-2024)</i> </li>
-		  <li>Pituitary Tumor Feature Extraction Methods Using MRI Images <i>(<a href="https://www.linkedin.com/in/engrmhaseeb/">Mr. Muhammad Haseeb Khan</a>, MS in Artificial Intelligence, Spring-2024)</i> </li>
+                  <li>Extract, Transform Load Error Detection and Classification Using Machine Learning <i>(<a href="https://www.linkedin.com/in/nazar-hussain-9b1714157/">Mr. Nazar Hussain</a>, MS Artificial Intelligence, Fall-2023)</i> </li>
+		  <li>Predictive Maintenance Using MDP & Q-Learning <i>(<a href="https://www.linkedin.com/in/bilawal-khan-jadoon-745258170/">Mr. Bilawal Jadoon</a>, MS Artificial Intelligence, Spring-2024)</i> </li>
+                  <li>Urdu Language command recognizer and translator using MFCC and CNN <i>(<a href="https://www.linkedin.com/in/usman-nawaz-21532418a">Mr. Usman Nawaz</a>, MS Artificial Intelligence, Spring-2024)</i> </li>
+		  <li>Pituitary Tumor Feature Extraction Methods Using MRI Images <i>(<a href="https://www.linkedin.com/in/engrmhaseeb/">Mr. Muhammad Haseeb Khan</a>, MS Artificial Intelligence, Spring-2024)</i> </li>
                   <li>Multi-Diseases Prediction Based on Low-Cost Blood Test Reports using AI <i>(<a href="https://www.linkedin.com/in/maria-zaib-a46a57273">Ms. Maria BiBi</a>, MS Artificial Intelligence, Spring-2024)</i> </li>
 		  <li>AI based Preservation and Restoration Modelling of the Sub-Surface Water <i>(<a href="https://www.linkedin.com/in/javeria-shah-4862b7174">Ms. Javeria BiBi</a>, MS Artificial Intelligence, Spring-2024)</i> </li>
-		  <li>Anomaly Detection with Self-Supervised Learning Using Deep Edge Intelligence and Federated Learning Approach <i>(<a href="https://www.linkedin.com/in/qasim-muhammad-829092b9"></a>Mr. Muhammad Qasim Khan</i>, MS in Artificial Intelligence, Fall-2024) </li>
-		  <li>Automated Detection of Thalassemia from Blood Smear Images Using Deep Learning <i>(<a href="https://www.linkedin.com/in/muhammad-asad-khan-306110210"></a>Mr. Muhammad Asad Khan</i>, MS in Data Science, Fall-2024) </li>
-		  <li>IOT Enabled Anomaly Detection in Packaging Material Splice <i>(<a href="https://www.linkedin.com/in/asif-khan-46551ab5"></a>Mr. Asif Khan </i>, MS in Artificial Intelligence, Fall-2024)</li>
+		  <li>Anomaly Detection with Self-Supervised Learning Using Deep Edge Intelligence and Federated Learning Approach <i>(<a href="https://www.linkedin.com/in/qasim-muhammad-829092b9"></a>Mr. Muhammad Qasim Khan</i>, MS Artificial Intelligence, Fall-2024) </li>
+		  <li>Automated Detection of Thalassemia from Blood Smear Images Using Deep Learning <i>(<a href="https://www.linkedin.com/in/muhammad-asad-khan-306110210"></a>Mr. Muhammad Asad Khan</i>, MS Data Science, Fall-2024) </li>
+		  <li>IOT Enabled Anomaly Detection in Packaging Material Splice <i>(<a href="https://www.linkedin.com/in/asif-khan-46551ab5"></a>Mr. Asif Khan </i>, MS Artificial Intelligence, Fall-2024)</li>
 		  <li>Fine-tuning of Diffusion Model with Pakistani Demographics <i>(<a href="https://www.linkedin.com/in/anum-hafeez-39197614b"></a>Ms. Anum Hafeez</i>, MS Data Science, Fall-2024) </li>
                 </ol> <br>
 
 	      <div class="subheading mb-3">MS/M.Phil. Thesis (Co-Supervised)</div>
                 <ol type="1">
-                  <li>Predictive Maintenance in Industrial IoT using Deep Adversarial Learning <i>(<a href="https://www.linkedin.com/in/isra-zafat-khan-600a291a2">Ms. Isra Zafat,</a> MS AI, Spring-2023)</i> </li>
-		  <li>ECG Based Arrhythmia Classification using Deep Learning <i>(<a href="https://www.linkedin.com/in/aqsa-khan-243881189/">Ms. Aqsa Khan,</a> MS AI, Spring-2023)</i> </li>
-		  <li>Healthcare Recommendation System for Cancer Patient <i>(<a href="https://www.linkedin.com/in/yousra-rehman-bb9a16200">Ms. Yousra Rehman,</a> MS AI, Spring-2023)</i> </li>
+                  <li>Predictive Maintenance in Industrial IoT using Deep Adversarial Learning <i>(<a href="https://www.linkedin.com/in/isra-zafat-khan-600a291a2">Ms. Isra Zafat,</a> MS Artificial Intelligence, Spring-2023)</i> </li>
+		  <li>ECG Based Arrhythmia Classification using Deep Learning <i>(<a href="https://www.linkedin.com/in/aqsa-khan-243881189/">Ms. Aqsa Khan,</a> MS Artificial Intelligence, Spring-2023)</i> </li>
+		  <li>Healthcare Recommendation System for Cancer Patient <i>(<a href="https://www.linkedin.com/in/yousra-rehman-bb9a16200">Ms. Yousra Rehman,</a> MS Artificial Intelligence, Spring-2023)</i> </li>
 		  <li>Precise Image generation from EEG through generative models <i>(<a href="https://www.linkedin.com/in/sana-khan-30335b27a">Ms. Sana Irshad,</a> MS Data Science, Spring-2024)</i> </li>
-		  <li>AI-based Eye Disease Pre-Symptomatic Detection Using Next-Generation Sequence Data <i>(<a href="https://www.linkedin.com/in/miqbal-in/">Mr. Muhammad Iqbal Khan,</a> MS AI, Spring-2024)</i> </li>
-		  <li>Large Language Model Based Virtual Legal Assistant <i>(<a href="https://www.linkedin.com/in/nawal-khan-880266208/">Ms. Nawal Khan,</a> MS AI, Spring-2024)</i> </li>
+		  <li>AI-based Eye Disease Pre-Symptomatic Detection Using Next-Generation Sequence Data <i>(<a href="https://www.linkedin.com/in/miqbal-in/">Mr. Muhammad Iqbal Khan,</a> MS Artificial Intelligence, Spring-2024)</i> </li>
+		  <li>Large Language Model Based Virtual Legal Assistant <i>(<a href="https://www.linkedin.com/in/nawal-khan-880266208/">Ms. Nawal Khan,</a> MS Artificial Intelligence, Spring-2024)</i> </li>
                 </ol> <br>
 
 	      <div class="subheading mb-3">Final Year Projects (FYP)</div>
