--- a/index.html
+++ b/index.html
@@ -1135,19 +1135,19 @@
                 <ol type="1">
                   <li>AI-Based Skilled People Marketplace App <i>(<a href="https://www.linkedin.com/in/talal-zaman-abbasi">Mr. Talal Zaman Abbassi</a> and <a href="https://www.linkedin.com/in/yaseen-ejaz-3b9589219">Yaseen Ejaz,</a> Spring-2024)</i> </li>
 		  <li>Retrieval Augmented Generation for QA using Knowledge Graphs <i>(<a href="https://www.linkedin.com/in/yaseen-ejaz-ahmed">Mr. Yaseen Ejaz Ahmed</a> and Mr. Muhammad Danish, Spring-2024)</i> </li>
-		  <li>ACE (Autonomous Customer Experience) <i>(Ms. Sibgha Ali and <a href="https://www.linkedin.com/in/sheikh-abdurrehman-202b96220/">Mr. Sheikh Abdurrehman</a> – 2024)</i> </li>
-		 <li>Salted Grills Restaurant Inventory Mobile App <i>(<a href="#">Muhammad Waseem Faiz </a>and <a href="#">Muhammad Talha Jamal</a> Spring – 2025)</i> </li>
-		 <li>AI Diagnosis Of Children With Heart Defects<i> (<a href="#">Mr. Ali Farhan</a> Spring – 2025)</i> </li>
-		 <li>RAG Based Chatbot for Polio Eradication Programme <i>(<a href="#">Ms. Saira Ali </a>and <a href="#">Mr. Umer Nazir</a> Spring – 2025)</i> </li>
-		 <li>AI powered vision based Defect Detection in Electronic Boards <i>(<a href="#">Mr. Irfan Arshad </a>and <a href="#">Mr. Soban Ahmed</a> Spring – 2025)</i> </li>
-		 <li>AI-Based Faculty Portal For Higher Education Institute <i>(<a href="#">Mr. Ahsan Khan </a>and <a href="#">Mr. Farhan Muhammad</a> Spring – 2025)</i> </li>
+		  <li>ACE (Autonomous Customer Experience) <i>(Ms. Sibgha Ali and <a href="https://www.linkedin.com/in/sheikh-abdurrehman-202b96220/">Mr. Sheikh Abdurrehman</a> Spring – 2024)</i> </li>
+		 <li>Salted Grills Restaurant Inventory Mobile App <i>(<a href="https://www.linkedin.com/in/muhammad-waseem-faiz-297211244/">Muhammad Waseem Faiz </a>and <a href="https://www.linkedin.com/in/muhammad-talha-jamal/">Muhammad Talha Jamal</a> Spring – 2025)</i> </li>
+		 <li>AI Diagnosis Of Children With Heart Defects<i> (<a href="https://www.linkedin.com/in/ali-farhan-b592a9218/">Mr. Ali Farhan</a> Spring – 2025)</i> </li>
+		 <li>RAG Based Chatbot for Polio Eradication Programme <i>(<a href="https://www.linkedin.com/in/saira-ali-bhatti-041573242/">Ms. Saira Ali </a>and <a href="#">Mr. Umer Nazir</a> Spring – 2025)</i> </li>
+		 <li>AI powered vision based Defect Detection in Electronic Boards <i>(<a href="https://www.linkedin.com/in/irfan-arshad-057b10254/">Mr. Irfan Arshad </a>and <a href="https://www.linkedin.com/in/soban-ahmed-khan-95b86620a/">Mr. Soban Ahmed</a> Spring – 2025)</i> </li>
+		 <li>AI-Based Faculty Portal For Higher Education Institute <i>(<a href="https://www.linkedin.com/in/ahsan-khan-7426a8291/">Mr. Ahsan Khan </a>and <a href="https://www.linkedin.com/in/farhad-muhammad-921a9430a/">Mr. Farhad Muhammad</a> Spring – 2025)</i> </li>
 		 <li>HeavyEquip Marketplace <i>(<a href="#">Ms. Wasqa Riaz </a>and <a href="#">Ms. Khuzaima Saeed</a> Spring – 2025)</i> </li>
-		 <li>AI Studio <i>(<a href="#">Mr. Muhammad Nouman Khan </a>, <a href="#">Mr. Talha </a>, <a href="#">Mr. Abdul Rehman </a>and <a href="#">Mr. Muhammad Abu Bakar Saddique</a> Spring – 2025)</i> </li>
+		 <li>AI Studio <i>(<a href="https://www.linkedin.com/in/muhammad-nouman-khan-248530233">Mr. Muhammad Nouman Khan </a>, <a href="#">Mr. Talha </a>, <a href="https://www.linkedin.com/in/abdul-rehman-ai/">Mr. Abdul Rehman </a>and <a href="#">Mr. Muhammad Abu Bakar Saddique</a> Spring – 2025)</i> </li>
 		 <li>AI-Powered HealthCare Disease Prediction and Analytics System <i>(<a href="#">Mr. Abdul Baseer </a> Spring – 2025)</i> </li>
 		 <li>Smart Ride and Fleet Management System <i>(<a href="#">Mr. Waqas Ahmad </a>and <a href="#">Mr. Muhammad Ziad Khan</a> Spring – 2025)</i> </li>
 		 <li>Inflectra: AI Enhanced Web Platform for Business and Influencers Marketing <i>(<a href="#">Mr. Ali Hassan </a>and <a href="#">Mr. Ahmad Ijaz</a> Spring – 2025)</i> </li>
-       		 <li>Real-Time Railway Safety & Predictive Analytics Using ATC Data <i>(<a href="#">Mr. Muhammad Aashir Rajput </a>and <a href="#">Mr. Siyyam Ali Khan </a> Spring – 2025)</i> 
-		 <li>Intelligent Traffic Controlling System with Real-Time Anomaly Detection and Response <i>(<a href="#">Mr. Mohamed Rizwan Rikhaz Ahamed </a>, <a href="#">Mr. Mohamed Fahim Mohamed Saad </a> and <a href="#">Mr. Mohamed Fawsmin Mohamed Dhilham </a> Spring – 2025)</i>			 
+       		 <li>Real-Time Railway Safety & Predictive Analytics Using ATC Data <i>(<a href="https://www.linkedin.com/in/muhammad-aashir-rajput-ba2933240/">Mr. Muhammad Aashir Rajput </a>and <a href="https://www.linkedin.com/in/siyyamalikhan-666875233/">Mr. Siyyam Ali Khan </a> Spring – 2025)</i> 
+		 <li>Intelligent Traffic Controlling System with Real-Time Anomaly Detection and Response <i>(<a href="https://www.linkedin.com/in/rikhaz-ahamed-8b1150248/">Mr. Mohamed Rizwan Rikhaz Ahamed </a>, <a href="https://www.linkedin.com/in/saadfahim-sd/">Mr. Mohamed Fahim Mohamed Saad </a> and <a href="https://www.linkedin.com/in/mohamed-dhilham-4b81a621b/">Mr. Mohamed Fawsmin Mohamed Dhilham </a> Spring – 2025)</i>			 
                 </ol> <br>
 
         </div>
