--- a/index.html
+++ b/index.html
@@ -1089,6 +1089,7 @@
               <li>Programming For AI (Spring 2023)</li>
 		<li>Database Systems (Spring & Fall 2024)</li>
 		<li>Natural Language Processing (Fall 2024)</li>
+		<li>Big Data Management and Processing (Spring 2025)</li>
             </ol>
         </div>
       </section>
@@ -1118,7 +1119,10 @@
 		  <li>Anomaly Detection with Self-Supervised Learning Using Deep Edge Intelligence and Federated Learning Approach <i>(<a href="https://www.linkedin.com/in/qasim-muhammad-829092b9">Mr. Muhammad Qasim Khan</a>, MS Artificial Intelligence, Fall-2024)</i> </li>
 		  <li>Automated Detection of Thalassemia from Blood Smear Images Using Deep Learning <i>(<a href="https://www.linkedin.com/in/muhammad-asad-khan-306110210">Mr. Muhammad Asad Khan</a>, MS Data Science, Fall-2024)</i> </li>
 		  <li>IOT Enabled Anomaly Detection in Packaging Material Splice <i>(<a href="https://www.linkedin.com/in/asif-khan-46551ab5">Mr. Asif Khan</a>, MS Artificial Intelligence, Fall-2024)</i> </li>
-		  <li>Fine-tuning of Diffusion Model with Pakistani Demographics <i>(<a href="https://www.linkedin.com/in/anum-hafeez-39197614b">Ms. Anum Hafeez</a>, MS Data Science, Fall-2024)</i> </li>
+		  <li>Fine-tuning of Diffusion Model with Pakistani Demographics <i>(<a href="https://www.linkedin.com/in/hifsah-nasir-090a541a4/">Ms. Anum Hafeez</a>, MS Data Science, Fall-2024)</i> </li>
+		  <li>Real-time Differential Privacy for Autonomous Vehicles Using Edge Computing <i>(<a href="https://www.linkedin.com/in/anum-hafeez-39197614b">Ms. Hifsah Nasir</a>, MS Artificial Intelligence, Spring-2025)</i> </li>
+		  <li>Prediction of Gas Permeability of Polymers Through Their Molecular Structure <i>(<a href="https://www.linkedin.com/in/aneela-habib-479928236/">Ms. Aneela Habib</a>, MS Data Science, Spring-2025)</i> </li>
+		  <li>RAG-based Chatbot for Legal Affairs <i>(<a href="https://www.linkedin.com/in/mahnoor-faridoon-141b8a287/">Ms. Mahnoor Faridoon</a>, MS Data Science, Spring-2025)</i> </li>
                 </ol> <br>
 
 	      <div class="subheading mb-3">MS/M.Phil. Thesis (Co-Supervised)</div>
