--- a/index.html
+++ b/index.html
@@ -1083,7 +1083,7 @@
           <b>BS Courses </b>
             <ol type="1">
               <li>Introduction to ICT (Fall 2020)</li>
-              <li>Discrete Stractures (Spring 2021, Spring 2023, Fall 2023)</li>
+              <li>Discrete Structures (Spring 2021, Spring 2023, Fall 2023)</li>
               <li>Programming Fudamentals (Fall 2023) </li>
 	     <li> Introduction to Data Science (Fall 2023) </li>
               <li>Programming For AI (Spring 2023)</li>
