--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
             <ol type="1">
               	<li>International Conference on Intelligent Manufacturing and Industrial Big Data (<a href="https://easychair.org/cfp/ICIMIBD2022">ICIMIBD2022</a>), Changsha, China, December 9-11, 2022.</li>
 		<li>The Sixteenth International Conference on Advances in Databases, Knowledge, and Data Applications (<a href="https://www.iaria.org/conferences2024/ComDBKDA24.html">DBKDA 2024</a>), Athen, Greece, March 10-14, 2024.</li>
-		<li>The 22nd IEEE International Symposium on Parallel and Distributed Processing with Applications (<a href="https://www.ieee-ispa.org/2024/ispa/index.php">IEEE ISPA 2024</a>), Kaifeng, Henan, China October 30 to November 2, 2024.</li>
+		<li>The 22nd IEEE International Symposium on Parallel and Distributed Processing with Applications  (<a href="https://www.ieee-ispa.org/2024/ispa/index.php">IEEE ISPA 2024</a>), Kaifeng, Henan, China October 30 to November 2, 2024. (<a href="https://www.ieee-ai-for-science.org/2024/ispa/tpc.php">TPC</a>) </li>
             </ol>
 		
              <b>Guest Editor</b>
