--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       "jobTitle": "Associate Professor",
       "worksFor": {
         "@type": "Organization",
-        "name": "PAK-AUSTRIA FACHHOSCHULE - INSTITUTE OF APPLED SCIENCES AND TECHNOLOGY"
+        "name": "American University of Bahrain"
       }
     }
     </script>
@@ -141,7 +141,7 @@
           </h1><br>
   		<h3> Solution Architect &nbsp; | &nbsp; Data Scientist &nbsp; | &nbsp; Researcher </h3> <br>
       <h3>Associate Professor</h3>
-          <div class="subheading mb-5">Pak-Austria Fachhoschule - Institute of Appled Sciences and Technology, Mang, Haripur, KPK, Pakistan.<br>
+          <div class="subheading mb-5">American University of Bahrain, Riffa, Bahrain.<br>
             <svg class="bi bi-phone" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M11 1H5a1 1 0 00-1 1v12a1 1 0 001 1h6a1 1 0 001-1V2a1 1 0 00-1-1zM5 0a2 2 0 00-2 2v12a2 2 0 002 2h6a2 2 0 002-2V2a2 2 0 00-2-2H5z" clip-rule="evenodd"/>
               <path fill-rule="evenodd" d="M8 14a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"/></svg>
@@ -149,7 +149,7 @@
              <i class="fa fa-envelope"></i>
                maqbool at 163 dot com &emsp;
             <i class="fa fa-envelope"></i>
-                maqbool at fecid dot paf-iast dot edu dot pk
+                maqbool at aubh dot edu dot bh
           </div>
           <p class="lead mb-5">Dr. Maqbool Khan is an experienced in leveraging big data technologies and data science using cloud computing to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
 
@@ -195,6 +195,20 @@
 
       <hr class="m-0">
 
+      <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+        <div class="w-100">
+          <h2 class="mb-5">Experience</h2>
+          <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="resume-content">
+              <h5 class="mb-0">American University of Bahrain, Riffa, Bahrain </h5>
+              <a href="https://www.aubh.edu.bh/">www.aubh.edu.bh</a>
+              <p>Associate Professor (Data Science & AI)</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2025.08 – Present</span>
+            </div>
+          </div>
+		
       <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
         <div class="w-100">
           <h2 class="mb-5">Experience</h2>
